contrast fixes, hide sponsors on scholarships page, menu styles

--- a/assets/_scss/_variables.scss
+++ b/assets/_scss/_variables.scss
@@ -72,8 +72,9 @@ $speaker-info-color:      $gray-base;
 // Menu
 $menu-border:             $accent-light;
 $menu-banner-bg:          $accent;
-$menu-banner-color:       $gray-lighter;
-$menu-headers:            $accent;
+$menu-banner-color:       $gray-dark;
+$menu-banner-accent:      $accent-light;
+$menu-headers:            $primary;
 $menu-bg:                 $gray-lighter;
 $menu-color:              $gray-base;
 $menu-divider:            $gray-light;
